# FastAPI-shop

./: .gitignore  README.md  pyproject.toml
backend/: pyproject.toml  test_shop.db  test_shop.db"
backend/app/: config.py  database.py  main.py  pyproject.toml
backend/app/cache/: redis.py
backend/app/core/: config.py  security.py
backend/app/models/: categories.py  category.py  products.py  user.py  users.py
backend/app/repositories/: categories_repo.py  products_repo.py  users_repo.py
backend/app/routers/: __init__.py  cart.py  categories.py  products.py  users.py
backend/app/schemas/: cart.py  categories.py  products.py  users.py
backend/app/services/: auth.py  auth_services.py  cart.py  categories.py  dependencies.py  products.py
backend/app/tests/: conftest.py  pytest_explained.md  test_cart.py  test_categories.py  test_post.py  test_products.py  test_users.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: Header.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: cart.js  stores_auth.js
frontend/src/views/: CartPage.vue  LoginPage.vue  RegisterPage.vue
